# cad-kernel-experiments

./: .gitignore  Cargo.toml
notes/: notes.tex  sources.bib
src/: brep.rs  brep2.rs  brep3.rs  brep_1d.rs  brep_2d.rs  geometry.rs  lib.rs  mesh.rs
viewer/: Cargo.toml
viewer/src/: camera.rs  canvas.rs  editor_2d.rs  egui_render.rs  event.rs  main.rs  wireframe_egui.rs
viewer/src/render/: fill.rs  mod.rs  shader.wgsl  wireframe.rs
viewer/src/render/shaders/: fill.wgsl  wireframe.wgsl
