[package]
name = "cad-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cad-kernel = { path = ".." }
nalgebra = "0.32"

# Render stuff
log = "0.4"
env_logger = "0.10"
winit = { version = "0.28", default-features = false, features = ["x11"] }
wgpu = "0.15"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"

# egui
eframe = { version = "0.21", default-features = false, features = ["wgpu", "default_fonts"] }
